# QoL

./: .gitignore  CMakeLists.txt  MakeFile  README.md  q1v2.s  q4.s  q4v2.s
General Batch/: Admin Tools.bat  README.md
Nginx/: Kill_Nginx.bat  Start_Nginx.bat
P-notes/: bt_test.py  general.txt
P-notes/ASSM/h1/: q1.s  q1v2.s  q2.s  q3.s  q4.s  test1.s  test2.s
P-notes/ASSM/mips/h1/: q2.s  q3.s  q4v2.s  q5.s  q6.s
P-notes/ASSM/mips/h2/: q1.s  q2.s  q3.s  q4.s
P-notes/ASSM/mips/lab/: q1.s  q2.s  q3.s  q4.s  q5.s  q6.s
P-notes/ASSM/test/: test.s  test3.s
P-notes/C#/: programmings c#.txt  test.cs
P-notes/C#/LibDev/: Addressbook.cs  Agent.cs  BT.cs  CSM.cs  ChannelEvent.cs  Enity.cs  FSM.cs  HSM.cs  IState.cs  LibDev.csproj  LibDev.sln  Program.cs  UtilityAI.cs  UtilityEvAI.cs  addressbook.proto
P-notes/C#/T1/: Program.cs  T1.sln
P-notes/C/Net_test/: CMakeLists.txt
P-notes/C/Te/: CMakeLists.txt  main.c
P-notes/C/Text/: kilo.c
P-notes/C/Text3/: Makefile
P-notes/C/arena/: main.c
P-notes/C/c_net/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  run.sh
P-notes/C/linklist/: main.c  run.sh
P-notes/C/spt/: main.c
P-notes/C/test/: main.c  memorytrace.c
P-notes/C/uitest/: .ninja_deps  .ninja_log  CMakeLists.txt  build.ninja  clean.sh  cmake_install.cmake  libs.txt  run.sh  setup.sh
P-notes/C/uitest/src/: main.c
P-notes/Cpp/test/: CMakeLists.txt
P-notes/Cpp/test_net/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  build.ninja  clean.sh  cmake_install.cmake
P-notes/Cpp/test_net/src/: main.cpp
P-notes/GodotScripts/: CC1.cs  ESC.cs
P-notes/general/: D1.txt  Programming Patterns.txt  Resources.txt  V1.txt  git_gelp.txt
P-notes/go/pokebdex/: cat.go  go.mod  main.go
P-notes/go/test/: go.mod  main.go
P-notes/java/: Assignment1_DefineClasses.rar
P-notes/java/Assignment1_DefineClasses/: clean.sh  run.sh
P-notes/java/Assignment2_MultiArray/: clean.sh  run.sh
P-notes/java/Assignment3_inheritance/: run.sh
P-notes/java/Assignment4_ploymorphism/: run.sh
P-notes/java/Assignment6_Exception_Handling/: run.sh
P-notes/java/BSTChecker/: BSTChecker.java  BSTNode.java  main.java
P-notes/java/Hello/: Bill.java  HelloWorld.java
P-notes/java/test/: main.java
P-notes/odin/test/: main.odin
P-notes/python/: binomial_probability.py  binomial_test.py  main.py  probability.py
P-notes/python/BT/: main.py
P-notes/python/PA6/: main.py
P-notes/python/PAF/: README.MD  main.py
P-notes/python/command/: main.py
P-notes/python/linklist/: main.py
P-notes/python/queue/: main.py
P-notes/python/recurve/: main.py
P-notes/zig/T1/: build.zig  build.zig.zon
Powershell Scripts/: Accounts.ps1  SendPasswordExpiryWarningV2.ps1  code.ps1  code2.ps1  test.ps1  testing.ps1
Scripts/: Hellow.sh  addDir.sh  doaddpass.sh
autohot/: Manga.ahk
build_templates/: CMakeLists_vcpkg.txt
build_templates/ProjectTemplate_CPP/: README.md  resource.rc
build_templates/ProjectTemplate_CPP/App/: Build-App.lua
build_templates/ProjectTemplate_CPP/Core/: Build-Core.lua
build_templates/TempC/: .clangd  .gitignore  CMakeLists.txt
build_templates/TempC/tests/: CMakeLists.txt
build_templates/ex2_typescript/: clean.sh
build_templates/ex3_c/: CMakeLists.txt  run.sh
emacs/: custom.el  init.el  plugins.el
emacs/themes/: synctank-theme.el
nvim/: README.md  init.lua  lazy-lock.json  lazyvim.json
nvim/lua/: vim-options.lua
nvim/lua/plugins/: catppuccin.lua  conform.lua  cyberdream.lua  debugging.lua  lint.lua  lsp-config.lua  lualine.lua  nvim-cmp.lua  telescope.lua  treesitter.lua  which-key.lua
(+86 files in other folders)
